fix(core): add detailed error message for concurrency limit exceeded